Change static directory name

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>Brendan Le</title>
 
 		<!-- Page Styles -->
-		<link rel='stylesheet' type='text/css' href='static/stylesheets/styles.css'/>
+		<link rel='stylesheet' type='text/css' href='assets/stylesheets/styles.css'/>
 
 		<!-- Montserrat -->
 		<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
@@ -20,7 +20,7 @@
 		<link rel='stylesheet' type='text/css' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css'/>
 
 		<!-- Animate.css -->
-		<link rel='stylesheet' type='text/css' href='static/stylesheets/animate.css'>
+		<link rel='stylesheet' type='text/css' href='assets/stylesheets/animate.css'>
 
 		<!-- Skrollr -->
 		<script src='https://cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.29/skrollr.min.js'></script>
@@ -64,29 +64,29 @@
 							<div class='row'>
 								<div class='col-md-4 wow fadeIn' data-wow-offset='80'>
 									<div class='icon-description'>HTML5</div>
-									<img src='static/images/logos/html5.png'></img>
+									<img src='assets/images/logos/html5.png'></img>
 								</div>
 								<div class='col-md-4 wow fadeIn' data-wow-offset='80' data-wow-delay='0.1s'>
 									<div class='icon-description'>CSS3</div>
-									<img src='static/images/logos/css3.png'></img>
+									<img src='assets/images/logos/css3.png'></img>
 								</div>
 								<div class='col-md-4 wow fadeIn' data-wow-offset='80' data-wow-delay='0.2s'>
 									<div class='icon-description'>Bootstrap</div>
-									<img src='static/images/logos/bootstrap.png'></img>
+									<img src='assets/images/logos/bootstrap.png'></img>
 								</div>
 							</div>
 							<div class='row'>
 								<div class='col-md-4 wow fadeIn' data-wow-offset='80' data-wow-delay='0.1s'>
 									<div class='icon-description'>jQuery</div>
-									<img src='static/images/logos/jquery.png'></img>
+									<img src='assets/images/logos/jquery.png'></img>
 								</div>
 								<div class='col-md-4 wow fadeIn' data-wow-offset='80' data-wow-delay='0.2s'>
 									<div class='icon-description'>Angular</div>
-									<img src='static/images/logos/angular.png'></img>
+									<img src='assets/images/logos/angular.png'></img>
 								</div>
 								<div class='col-md-4 wow fadeIn' data-wow-offset='80' data-wow-delay='0.3s'>
 									<div class='icon-description'>SASS</div>
-									<img src='static/images/logos/sass.png'></img>
+									<img src='assets/images/logos/sass.png'></img>
 								</div>
 								<!-- Not used: javascript.png -->
 							</div>
@@ -96,25 +96,25 @@
 							<div class='row'>
 								<div class='col-md-4 wow fadeIn' data-wow-offset='80' data-wow-delay='0.3s'>
 									<div class='icon-description'>Python/Django</div>
-									<img src='static/images/logos/python.png'></img>
+									<img src='assets/images/logos/python.png'></img>
 								</div>
 								<div class='col-md-4 wow fadeIn' data-wow-offset='80' data-wow-delay='0.4s'>
 									<div class='icon-description'>MySql</div>
-									<img src='static/images/logos/mysql.png'></img>
+									<img src='assets/images/logos/mysql.png'></img>
 								</div>
 								<div class='col-md-4 wow fadeIn' data-wow-offset='80' data-wow-delay='0.5s'>
 									<div class='icon-description'>Javscript</div>
-									<img src='static/images/logos/javascript.png'></img>
+									<img src='assets/images/logos/javascript.png'></img>
 								</div>
 							</div>
 							<div class='row'>
 								<div class='col-md-4 wow fadeIn' data-wow-offset='80' data-wow-delay='0.4s'>
 									<div class='icon-description'>Wordpress</div>
-									<img src='static/images/logos/wordpress.png'></img>
+									<img src='assets/images/logos/wordpress.png'></img>
 								</div>
 								<div class='col-md-4 wow fadeIn' data-wow-offset='80' data-wow-delay='0.5s'>
 									<div class='icon-description'>Photoshop</div>
-									<img src='static/images/logos/photoshop.png'></img>
+									<img src='assets/images/logos/photoshop.png'></img>
 								</div>
 							</div>
 						</div>
@@ -166,7 +166,7 @@
 							<a href='https://www.tumblr.com/theme/39492'><div class='subheader'>Niceties</div></a>
 							<div class='theme-frame'>
 								<div class='theme-container'>
-									<img src='static/images/niceties.png'></img>
+									<img src='assets/images/niceties.png'></img>
 								</div>
 							</div>
 						</div>
@@ -174,7 +174,7 @@
 							<a href='https://www.tumblr.com/theme/39492'><div class='subheader'>Min Line</div></a>
 							<div class='theme-frame'>
 								<div class='theme-container'>
-									<img src='static/images/minline.png'></img>
+									<img src='assets/images/minline.png'></img>
 								</div>
 							</div>
 						</div>
@@ -182,7 +182,7 @@
 							<a href='https://www.tumblr.com/theme/39492'><div class='subheader'>Pastels</div></a>
 							<div class='theme-frame'>
 								<div class='theme-container'>
-									<img src='static/images/pastels.png'></img>
+									<img src='assets/images/pastels.png'></img>
 								</div>
 							</div>
 						</div>
@@ -217,8 +217,8 @@
 
 
 	<!-- Page Javascript -->
-	<script src='static/javascript/wow.min.js'></script>
-	<script src='static/javascript/main.js'></script>
+	<script src='assets/javascript/wow.min.js'></script>
+	<script src='assets/javascript/main.js'></script>
 </html>
 
 
