--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	-->
 	<body>
 		<div class='container'>
-			<div class='row slide title-slide' data-center="background-position: 50% 0px;" data-top-bottom="background-position: 50% -400px;">
+			<div class='row title-slide' data-center="background-position: 50% 0px;" data-top-bottom="background-position: 50% -400px;">
 				<div class='background-filter' data-center="opacity: 0.3" data-top-bottom="opacity: 0.7"></div>
 				<div class='slide-content' data-anchor-target='.title-slide' data-center="opacity: 1;" data-top-bottom="opacity: 0;">
 					<div style='position: relative' class='slide-content-parallax' data-anchor-target='.title-slide' data-center="top: 0px;" data-top-bottom="top: 600px;">
@@ -53,66 +53,62 @@
 
 
 			<!-- White Background -->
-			<div class='row slide about-slide'>
-				<div class='col-md-12'>
+			<div class='row about-slide'>
+				<div class='max-width-container'>
 
 					<!-- About Me -->
 					<div class='row skills'>
 
-						<div class='col-md-6'>
-							<div class='header'>Primary Skills</div>
+						<div class='col-md-6 col-sm-12 skills-col'>
+							<div class='header'>Primary Techs</div>
 							<div class='row'>
-								<div class='col-md-4 wow fadeIn' data-wow-offset='80'>
+								<div class='col-sm-4 col-xs-6 wow fadeIn' data-wow-offset='80'>
 									<div class='icon-description'>HTML5</div>
 									<img src='assets/images/logos/html5.png'></img>
 								</div>
-								<div class='col-md-4 wow fadeIn' data-wow-offset='80' data-wow-delay='0.1s'>
+								<div class='col-sm-4 col-xs-6 wow fadeIn' data-wow-offset='80' data-wow-delay='0.1s'>
 									<div class='icon-description'>CSS3</div>
 									<img src='assets/images/logos/css3.png'></img>
 								</div>
-								<div class='col-md-4 wow fadeIn' data-wow-offset='80' data-wow-delay='0.2s'>
+								<div class='col-sm-4 col-xs-6 wow fadeIn' data-wow-offset='80' data-wow-delay='0.2s'>
 									<div class='icon-description'>Bootstrap</div>
 									<img src='assets/images/logos/bootstrap.png'></img>
 								</div>
-							</div>
-							<div class='row'>
-								<div class='col-md-4 wow fadeIn' data-wow-offset='80' data-wow-delay='0.1s'>
+								<div class='col-sm-4 col-xs-6 wow fadeIn' data-wow-offset='80' data-wow-delay='0.1s'>
 									<div class='icon-description'>jQuery</div>
 									<img src='assets/images/logos/jquery.png'></img>
 								</div>
-								<div class='col-md-4 wow fadeIn' data-wow-offset='80' data-wow-delay='0.2s'>
+								<div class='col-sm-4 col-xs-6 wow fadeIn' data-wow-offset='80' data-wow-delay='0.2s'>
 									<div class='icon-description'>Angular</div>
 									<img src='assets/images/logos/angular.png'></img>
 								</div>
-								<div class='col-md-4 wow fadeIn' data-wow-offset='80' data-wow-delay='0.3s'>
+								<div class='col-sm-4 col-xs-6 wow fadeIn' data-wow-offset='80' data-wow-delay='0.3s'>
 									<div class='icon-description'>SASS</div>
 									<img src='assets/images/logos/sass.png'></img>
 								</div>
 								<!-- Not used: javascript.png -->
 							</div>
 						</div>
-						<div class='col-md-6'>
-							<div class='header'>Secondary Skills</div>
+						<div class='col-md-6 col-sm-12 skills-col'>
+							<div class='header'>Secondary Techs</div>
 							<div class='row'>
-								<div class='col-md-4 wow fadeIn' data-wow-offset='80' data-wow-delay='0.3s'>
+								<div class='col-sm-4 col-xs-6 wow fadeIn' data-wow-offset='80' data-wow-delay='0.3s'>
 									<div class='icon-description'>Python/Django</div>
 									<img src='assets/images/logos/python.png'></img>
 								</div>
-								<div class='col-md-4 wow fadeIn' data-wow-offset='80' data-wow-delay='0.4s'>
+								<div class='col-sm-4 col-xs-6 wow fadeIn' data-wow-offset='80' data-wow-delay='0.4s'>
 									<div class='icon-description'>MySql</div>
 									<img src='assets/images/logos/mysql.png'></img>
 								</div>
-								<div class='col-md-4 wow fadeIn' data-wow-offset='80' data-wow-delay='0.5s'>
+								<div class='col-sm-4 col-xs-6 wow fadeIn' data-wow-offset='80' data-wow-delay='0.5s'>
 									<div class='icon-description'>Javscript</div>
 									<img src='assets/images/logos/javascript.png'></img>
 								</div>
-							</div>
-							<div class='row'>
-								<div class='col-md-4 wow fadeIn' data-wow-offset='80' data-wow-delay='0.4s'>
+								<div class='col-sm-4 col-xs-6 wow fadeIn' data-wow-offset='80' data-wow-delay='0.4s'>
 									<div class='icon-description'>Wordpress</div>
 									<img src='assets/images/logos/wordpress.png'></img>
 								</div>
-								<div class='col-md-4 wow fadeIn' data-wow-offset='80' data-wow-delay='0.5s'>
+								<div class='col-sm-4 col-xs-6 wow fadeIn' data-wow-offset='80' data-wow-delay='0.5s'>
 									<div class='icon-description'>Photoshop</div>
 									<img src='assets/images/logos/photoshop.png'></img>
 								</div>
@@ -124,85 +120,79 @@
 					<div class='row divider-row'><div class='divider'></div></div>
 
 					<!-- Testimonials -->
-					<div class='row testimonials'>
-						<div class='col-md-12'>
-							<div class='row'>
-								<div class='col-md-6 col-md-offset-3'>
-									<div class='header wow fadeInLeft' data-wow-offset='80'>Testimonials</div>
-								</div>
+					<div class='testimonials'>
+						<div class='row'>
+							<div class='col-md-6 col-md-offset-3'>
+								<div class='header wow fadeInLeft' data-wow-offset='80'>Testimonials</div>
 							</div>
-							<div class='row'>
-								<div class='col-md-5 col-md-offset-1 wow fadeIn' data-wow-offset='80' data-wow-duration='2s'>
-									<blockquote>
-										Money not too much important but I spend 2 days with another freelancers... But this freelancer fix all my problem. Give 1 chance to this freelancer.
-										<footer><cite title='imfrederik'>imfrederik</cite></footer>
-									</blockquote>
-								</div>
-								<div class='col-md-5 wow fadeIn' data-wow-offset='80' data-wow-delay='0.2s' data-wow-duration='2s'>
-									<blockquote>
-										Very good job! Find the issue in a couples of minutes and fix everything fast.
-										<footer><cite title='imfrederik'>ByZeitgeist</cite></footer>
-									</blockquote>
-								</div>
+						</div>
+						<div class='row'>
+							<div class='col-md-6 wow fadeIn' data-wow-offset='80' data-wow-duration='2s'>
+								<blockquote>
+									Very good job! Find the issue in a couples of minutes and fix everything fast.
+									<footer><cite title='imfrederik'>ByZeitgeist</cite></footer>
+								</blockquote>
+							</div>
+							<div class='col-md-6 wow fadeIn' data-wow-offset='80' data-wow-delay='0.2s' data-wow-duration='2s'>
+								<blockquote>
+									Money not too much important but I spend 2 days with another freelancers... But this freelancer fix all my problem. Give 1 chance to this freelancer.
+									<footer><cite title='imfrederik'>imfrederik</cite></footer>
+								</blockquote>
 							</div>
 						</div>
 					</div>
 
 				</div> <!-- /col-md-12 -->
 			</div> <!-- /row -->
-			
+
 
 			<!-- Image Background -->
-			<div class='row slide themes-slide image-slide' data-bottom-top="background-position: 50% 400px;" data-center="background-position: 50% 0px;"  data-top-bottom="background-position: 50% -400px">
+			<!-- <div class='row themes-slide image-slide' data-bottom-top="background-position: 50% 400px;" data-center="background-position: 50% 0px;"  data-top-bottom="background-position: 50% -400px"> -->
+			<div class='row themes-slide image-slide'>
 				<div class='background-filter' data-bottom-top='opacity: 0.4' data-center="opacity: 0" data-top-bottom="opacity: 0.4"></div>
 
-				<div class='col-md-12'>
+				<div class='max-width-container'>
 					<div class='row'>
 						<!-- Tumblr Themes -->
-						<div class='col-md-offset-3 col-md-6 header dark-bg'>Tumblr Themes</div>
+						<div class='header dark-bg'>Tumblr Themes</div>
 					</div>
 					<div class='row'>
-						<div class='col-md-4'>
-							<a href='https://www.tumblr.com/theme/39492'><div class='subheader'>Niceties</div></a>
+						<div class='col-md-6'>
+							<div class='subheader'>Niceties</div>
 							<div class='theme-frame'>
 								<div class='theme-container'>
-									<img src='assets/images/niceties.png'></img>
+									<a href='http://treegrass2.tumblr.com/'>
+										<img src='assets/images/niceties.png'></img>
+									</a>
 								</div>
 							</div>
 						</div>
-						<div class='col-md-4'>
-							<a href='https://www.tumblr.com/theme/39492'><div class='subheader'>Min Line</div></a>
+						<div class='col-md-6'>
+							<div class='subheader'>Min Line</div>
 							<div class='theme-frame'>
 								<div class='theme-container'>
-									<img src='assets/images/minline.png'></img>
-								</div>
-							</div>
-						</div>
-						<div class='col-md-4'>
-							<a href='https://www.tumblr.com/theme/39492'><div class='subheader'>Pastels</div></a>
-							<div class='theme-frame'>
-								<div class='theme-container'>
-									<img src='assets/images/pastels.png'></img>
+									<a href='http://minlinetheme.tumblr.com/'>
+										<img src='assets/images/minline.png'></img>
+									</a>
 								</div>
 							</div>
 						</div>
 					</div>
-
-
-
 				</div>
-				
+
 			</div>
 
 
 			<!-- White Background -->
-			<div class='row slide projects-slide'>
-
+			<div class='row projects-slide'>
+				<div class='max-width-container'>
+					<div class='header'>Personal Projects</div>
+				</div>
 			</div>
 
 
 			<!-- Gray Background -->
-			<div class='row slide footer-slide'>
+			<div class='row footer-slide'>
 
 				<!-- Footer, Contact, Citation -->
 
@@ -220,8 +210,3 @@
 	<script src='assets/javascript/wow.min.js'></script>
 	<script src='assets/javascript/main.js'></script>
 </html>
-
-
-
-
-
