--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<!--
 		data-top='background-position: 50% -150px' data-top-bottom='background-position: 50% 0px'
 	-->
-	<body>
+	<body id='skrollr-body'>
 		<div class='container'>
 			<div class='row title-slide' data-center="background-position: 50% 0px;" data-top-bottom="background-position: 50% -400px;">
 				<div class='background-filter' data-center="opacity: 0.3" data-top-bottom="opacity: 0.7"></div>
