Add responsive meta tag

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 
 <html>
 	<head>
+
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+
 		<title>Brendan Le</title>
 
 		<!-- Page Styles -->
