Add projects section

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 			<div class='row title-slide' data-center="background-position: 50% 0px;" data-top-bottom="background-position: 50% -400px;">
 				<div class='background-filter' data-center="opacity: 0.3" data-top-bottom="opacity: 0.7"></div>
 				<div class='slide-content' data-anchor-target='.title-slide' data-center="opacity: 1;" data-top-bottom="opacity: 0;">
-					<div style='position: relative' class='slide-content-parallax' data-anchor-target='.title-slide' data-center="top: 0px;" data-top-bottom="top: 600px;">
+					<div style='position: relative' class='slide-content-parallax'
+					data-anchor-target='.title-slide' data-center="top: 0px;" data-top-bottom="top: 600px;">
 						<div class='slide-header'>
 							<strong>Brendan Le</strong>
 						</div>
@@ -62,8 +63,8 @@
 					<!-- About Me -->
 					<div class='row skills'>
 
-						<div class='col-md-6 col-sm-12 skills-col'>
-							<div class='header'>Primary Techs</div>
+						<div class='col-md-6 skills-col'>
+							<h1>Primary Techs</h1>
 							<div class='row'>
 								<div class='col-sm-4 col-xs-6 wow fadeIn' data-wow-offset='80'>
 									<div class='icon-description'>HTML5</div>
@@ -92,8 +93,8 @@
 								<!-- Not used: javascript.png -->
 							</div>
 						</div>
-						<div class='col-md-6 col-sm-12 skills-col'>
-							<div class='header'>Secondary Techs</div>
+						<div class='col-md-6 skills-col'>
+							<h1>Secondary Techs</h1>
 							<div class='row'>
 								<div class='col-sm-4 col-xs-6 wow fadeIn' data-wow-offset='80' data-wow-delay='0.3s'>
 									<div class='icon-description'>Python/Django</div>
@@ -126,7 +127,7 @@
 					<div class='testimonials'>
 						<div class='row'>
 							<div class='col-md-6 col-md-offset-3'>
-								<div class='header wow fadeInLeft' data-wow-offset='80'>Testimonials</div>
+								<h1 class='wow fadeInLeft' data-wow-offset='80'>Testimonials</h1>
 							</div>
 						</div>
 						<div class='row'>
@@ -138,7 +139,8 @@
 							</div>
 							<div class='col-md-6 wow fadeIn' data-wow-offset='80' data-wow-delay='0.2s' data-wow-duration='2s'>
 								<blockquote>
-									Money not too much important but I spend 2 days with another freelancers... But this freelancer fix all my problem. Give 1 chance to this freelancer.
+									Money not too much important but I spend 2 days with another freelancers...
+									But this freelancer fix all my problem. Give 1 chance to this freelancer.
 									<footer><cite title='imfrederik'>imfrederik</cite></footer>
 								</blockquote>
 							</div>
@@ -150,18 +152,19 @@
 
 
 			<!-- Image Background -->
-			<!-- <div class='row themes-slide image-slide' data-bottom-top="background-position: 50% 400px;" data-center="background-position: 50% 0px;"  data-top-bottom="background-position: 50% -400px"> -->
-			<div class='row themes-slide image-slide'>
+			<!-- <div class='row themes-slide image-slide' data-bottom-top="background-position: 50% 400px;"
+			data-center="background-position: 50% 0px;"  data-top-bottom="background-position: 50% -400px"> -->
+			<div class='row themes-slide'>
 				<div class='background-filter' data-bottom-top='opacity: 0.4' data-center="opacity: 0" data-top-bottom="opacity: 0.4"></div>
 
 				<div class='max-width-container'>
 					<div class='row'>
 						<!-- Tumblr Themes -->
-						<div class='header dark-bg'>Tumblr Themes</div>
+						<h1 class='dark-bg'>Tumblr Themes</h1>
 					</div>
 					<div class='row'>
 						<div class='col-md-6'>
-							<div class='subheader'>Niceties</div>
+							<h2 class='dark-bg'>Niceties</h2>
 							<div class='theme-frame'>
 								<div class='theme-container'>
 									<a href='http://treegrass2.tumblr.com/'>
@@ -171,7 +174,7 @@
 							</div>
 						</div>
 						<div class='col-md-6'>
-							<div class='subheader'>Min Line</div>
+							<h2 class='dark-bg'>Min Line</h2>
 							<div class='theme-frame'>
 								<div class='theme-container'>
 									<a href='http://minlinetheme.tumblr.com/'>
@@ -188,17 +191,98 @@
 
 			<!-- White Background -->
 			<div class='row projects-slide'>
-				<div class='max-width-container'>
-					<div class='header'>Personal Projects</div>
+				<div class='max-width-container-small'>
+					<h1>Personal Projects</h1>
+					<div class='row'>
+						<div class='col-md-6 col-sm-6 text-center project-desc'>
+							<h2>Word Study</h2>
+							<p>
+								A simple app to test your vocabulary. See how many other people got each question correct!
+							</p>
+						</div>
+						<div class='col-md-6 col-sm-6 text-center'>
+							<div class='fade-in-borders'>
+								<a href='http://faugo.com/wordstudyapp'>
+									<img src='assets/images/projects/wordstudy.png' class='preview'></img>
+								</a>
+								<div class='wow fadeInRight fade-in-border' data-wow-offset='80' data-wow-duration='2s'></div>
+								<div class='wow fadeInLeft fade-in-border' data-wow-offset='80' data-wow-duration='2s'></div>
+								<div class='wow fadeInUp fade-in-border' data-wow-offset='80' data-wow-duration='2s'></div>
+								<div class='wow fadeInDown fade-in-border' data-wow-offset='80' data-wow-duration='2s'></div>
+							</div>
+						</div>
+					</div>
+					<div class='row'>
+
+						<div class='col-md-6 col-sm-push-6 col-sm-6 text-center project-desc'>
+							<h2>Correlated Surveys</h2>
+							<p>
+								A surveying application where user-generated surveys can be correlated to
+								discover relationships between demographics.
+							</p>
+						</div>
+						<div class='col-md-6 col-sm-pull-6 col-sm-6 text-center'>
+							<div class='fade-in-borders'>
+								<a href='http://surveyapp.faugo.com'>
+									<img src='assets/images/projects/surveyapp.png' class='preview'></img>
+								</a>
+								<div class='wow fadeInRight fade-in-border' data-wow-offset='80' data-wow-duration='2s'></div>
+								<div class='wow fadeInLeft fade-in-border' data-wow-offset='80' data-wow-duration='2s'></div>
+								<div class='wow fadeInUp fade-in-border' data-wow-offset='80' data-wow-duration='2s'></div>
+								<div class='wow fadeInDown fade-in-border' data-wow-offset='80' data-wow-duration='2s'></div>
+							</div>
+						</div>
+					</div>
+					<div class='row'>
+						<div class='col-md-6 col-sm-6 text-center project-desc'>
+							<h2>Color Guess</h2>
+							<p>
+								A game that helps you practice your designer skills by
+								guessing three letter hexes of flashing colors.
+							</p>
+						</div>
+						<div class='col-md-6 col-sm-6 text-center'>
+							<div class='fade-in-borders'>
+								<a href='http://faugo.com/colorguess'>
+									<img src='assets/images/projects/colorguess.png' class='preview'></img>
+								</a>
+								<div class='wow fadeInRight fade-in-border' data-wow-offset='80' data-wow-duration='2s'></div>
+								<div class='wow fadeInLeft fade-in-border' data-wow-offset='80' data-wow-duration='2s'></div>
+								<div class='wow fadeInUp fade-in-border' data-wow-offset='80' data-wow-duration='2s'></div>
+								<div class='wow fadeInDown fade-in-border' data-wow-offset='80' data-wow-duration='2s'></div>
+							</div>
+						</div>
+					</div>
+					<div class='row'>
+						<div class='col-md-6 col-sm-push-6 col-sm-6 text-center project-desc'>
+							<h2>OES Menu</h2>
+							<p>
+								A cleaner interface for the OES school menu. Web scraped from the official menu and updated daily.
+							</p>
+						</div>
+						<div class='col-md-6 col-sm-pull-6 col-sm-6 text-center'>
+							<div class='fade-in-borders'>
+								<a href='http://faugo.com/menu'>
+									<img src='assets/images/projects/oesmenu.png' class='preview'></img>
+								</a>
+								<div class='wow fadeInRight fade-in-border' data-wow-offset='80' data-wow-duration='2s'></div>
+								<div class='wow fadeInLeft fade-in-border' data-wow-offset='80' data-wow-duration='2s'></div>
+								<div class='wow fadeInUp fade-in-border' data-wow-offset='80' data-wow-duration='2s'></div>
+								<div class='wow fadeInDown fade-in-border' data-wow-offset='80' data-wow-duration='2s'></div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 
 
 			<!-- Gray Background -->
 			<div class='row footer-slide'>
+				<div class='max-width-container'>
 
-				<!-- Footer, Contact, Citation -->
+					Hero Image Source: <a href='https://www.flickr.com/photos/coralicrfo'>Desobte</a>
 
+				</div>
 			</div>
 
 
