--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
 
 		<title>Brendan Le</title>
 
-		<!-- Page Styles -->
-		<link rel='stylesheet' type='text/css' href='assets/stylesheets/styles.css'/>
-
 		<!-- Montserrat -->
 		<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 		<!-- Open Sans -->
@@ -27,6 +24,9 @@
 
 		<!-- Skrollr -->
 		<script src='https://cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.29/skrollr.min.js'></script>
+
+		<!-- Page Styles -->
+		<link rel='stylesheet' type='text/css' href='assets/stylesheets/styles.css'/>
 
 	</head>
 
@@ -151,20 +151,17 @@
 			</div> <!-- /row -->
 
 
-			<!-- Image Background -->
-			<!-- <div class='row themes-slide image-slide' data-bottom-top="background-position: 50% 400px;"
-			data-center="background-position: 50% 0px;"  data-top-bottom="background-position: 50% -400px"> -->
+			<!-- Themes -->
 			<div class='row themes-slide'>
 				<div class='background-filter' data-bottom-top='opacity: 0.4' data-center="opacity: 0" data-top-bottom="opacity: 0.4"></div>
 
 				<div class='max-width-container'>
 					<div class='row'>
-						<!-- Tumblr Themes -->
-						<h1 class='dark-bg'>Tumblr Themes</h1>
+						<h1 class='dark-bg heavy'>Original Themes</h1>
 					</div>
 					<div class='row'>
 						<div class='col-md-6'>
-							<h2 class='dark-bg'>Niceties</h2>
+							<h2 class='dark-bg'>Niceties <div class='info'>Tumblr</div></h2>
 							<div class='theme-frame'>
 								<div class='theme-container'>
 									<a href='http://treegrass2.tumblr.com/'>
@@ -172,9 +169,15 @@
 									</a>
 								</div>
 							</div>
+							<a class='button' href='http://treegrass2.tumblr.com'>
+								Demo
+							</a>
+							<a class='red button' href='https://www.tumblr.com/theme/39492'>
+								Install
+							</a>
 						</div>
 						<div class='col-md-6'>
-							<h2 class='dark-bg'>Min Line</h2>
+							<h2 class='dark-bg'>Min Line <div class='info'>Tumblr</div></h2>
 							<div class='theme-frame'>
 								<div class='theme-container'>
 									<a href='http://minlinetheme.tumblr.com/'>
@@ -182,6 +185,30 @@
 									</a>
 								</div>
 							</div>
+							<a class='button' href='http://minlinetheme.tumblr.com/'>
+								Demo
+							</a>
+							<a class='red button disabled'>
+								Install
+							</a>
+						</div>
+					</div>
+					<div class='row buffer-top'>
+						<div class='col-md-6 col-md-offset-3'>
+							<h2 class='dark-bg'>Slique <div class='info'>Reddit</div></h2>
+							<div class='theme-frame'>
+								<div class='theme-container'>
+									<a href='https://reddit.com/r/slique/'>
+										<img src='assets/images/slique.png'></img>
+									</a>
+								</div>
+							</div>
+							<a class='button' href='https://reddit.com/r/slique/'>
+								Demo
+							</a>
+							<a class='red button' href='https://github.com/leb2/slique'>
+								Install
+							</a>
 						</div>
 					</div>
 				</div>
@@ -192,7 +219,7 @@
 			<!-- White Background -->
 			<div class='row projects-slide'>
 				<div class='max-width-container-small'>
-					<h1>Personal Projects</h1>
+					<h1 class='heavy'>Personal Projects</h1>
 					<div class='row'>
 						<div class='col-md-6 col-sm-6 text-center project-desc'>
 							<h2>Word Study</h2>
@@ -280,7 +307,12 @@
 			<div class='row footer-slide'>
 				<div class='max-width-container'>
 
-					Hero Image Source: <a href='https://www.flickr.com/photos/coralicrfo'>Desobte</a>
+					<div>
+						Hero Image Source: <a href='https://www.flickr.com/photos/coralicrfo'>Desobte</a>
+					</div>
+					<div>
+						<a href='https://github.com/leb2/'>Github</a>
+					</div>
 
 				</div>
 			</div>
