Add hash for themes

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
 				<div class='max-width-container'>
 					<div class='row'>
-						<h1 class='dark-bg heavy'>Original Themes</h1>
+						<h1 class='dark-bg heavy' id='themes'>Original Themes</h1>
 					</div>
 					<div class='row'>
 						<div class='col-md-6'>
