--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<script src='https://cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.29/skrollr.min.js'></script>
 
 		<!-- Page Styles -->
-		<link rel='stylesheet' type='text/css' href='assets/stylesheets/styles.css'/>
+		<link rel='stylesheet' type='text/css' href='assets/sass/styles.css'/>
 
 	</head>
 
@@ -49,7 +49,7 @@
 							<hr class='hr-bottom'/>
 						</div>
 						<div class='subtext'>
-							Frontend Web Developer
+							Full Stack Web Developer
 						</div>
 					</div>
 				</div>
@@ -221,25 +221,6 @@
 				<div class='max-width-container-small'>
 					<h1 class='heavy'>Personal Projects</h1>
 					<div class='row'>
-						<div class='col-md-6 col-sm-6 text-center project-desc'>
-							<h2>Word Study</h2>
-							<p>
-								A simple app to test your vocabulary. See how many other people got each question correct!
-							</p>
-						</div>
-						<div class='col-md-6 col-sm-6 text-center'>
-							<div class='fade-in-borders'>
-								<a href='http://faugo.com/wordstudyapp'>
-									<img src='assets/images/projects/wordstudy.png' class='preview'></img>
-								</a>
-								<div class='wow fadeInRight fade-in-border' data-wow-offset='80' data-wow-duration='2s'></div>
-								<div class='wow fadeInLeft fade-in-border' data-wow-offset='80' data-wow-duration='2s'></div>
-								<div class='wow fadeInUp fade-in-border' data-wow-offset='80' data-wow-duration='2s'></div>
-								<div class='wow fadeInDown fade-in-border' data-wow-offset='80' data-wow-duration='2s'></div>
-							</div>
-						</div>
-					</div>
-					<div class='row'>
 
 						<div class='col-md-6 col-sm-push-6 col-sm-6 text-center project-desc'>
 							<h2>Correlated Surveys</h2>
@@ -260,18 +241,19 @@
 							</div>
 						</div>
 					</div>
+
 					<div class='row'>
 						<div class='col-md-6 col-sm-6 text-center project-desc'>
-							<h2>Color Guess</h2>
+							<h2>Graphic Arts</h2>
 							<p>
-								A game that helps you practice your designer skills by
-								guessing three letter hexes of flashing colors.
+                                A portfolio of projects demonstrating the application of graphic arts to web development.
+								Created for an independent study during high school.
 							</p>
 						</div>
 						<div class='col-md-6 col-sm-6 text-center'>
 							<div class='fade-in-borders'>
-								<a href='http://faugo.com/colorguess'>
-									<img src='assets/images/projects/colorguess.png' class='preview'></img>
+								<a href='http://leb2.github.io/graphic-arts-is/dist/'>
+									<img src='assets/images/projects/graphicarts.png' class='preview'></img>
 								</a>
 								<div class='wow fadeInRight fade-in-border' data-wow-offset='80' data-wow-duration='2s'></div>
 								<div class='wow fadeInLeft fade-in-border' data-wow-offset='80' data-wow-duration='2s'></div>
@@ -280,17 +262,40 @@
 							</div>
 						</div>
 					</div>
+
 					<div class='row'>
+
 						<div class='col-md-6 col-sm-push-6 col-sm-6 text-center project-desc'>
-							<h2>OES Menu</h2>
+							<h2>ASCVD/T2D Risk Calculator</h2>
 							<p>
-								A cleaner interface for the OES school menu. Web scraped from the official menu and updated daily.
+                                Calculate your risk of cardiovascular disease and type 2 diabetes using a machine learning model.
+								Created under Professor Xi Luo.
 							</p>
 						</div>
 						<div class='col-md-6 col-sm-pull-6 col-sm-6 text-center'>
 							<div class='fade-in-borders'>
-								<a href='http://faugo.com/menu'>
-									<img src='assets/images/projects/oesmenu.png' class='preview'></img>
+								<a href='http://rapp.bigcomplexdata.com:3333/'>
+									<img src='assets/images/projects/riskcalculator.png' class='preview'></img>
+								</a>
+								<div class='wow fadeInRight fade-in-border' data-wow-offset='80' data-wow-duration='2s'></div>
+								<div class='wow fadeInLeft fade-in-border' data-wow-offset='80' data-wow-duration='2s'></div>
+								<div class='wow fadeInUp fade-in-border' data-wow-offset='80' data-wow-duration='2s'></div>
+								<div class='wow fadeInDown fade-in-border' data-wow-offset='80' data-wow-duration='2s'></div>
+							</div>
+						</div>
+					</div>
+
+					<div class='row'>
+						<div class='col-md-6 col-sm-6 text-center project-desc'>
+							<h2>Word Study</h2>
+							<p>
+								A simple app to test your vocabulary. See how many other people got each question correct!
+							</p>
+						</div>
+						<div class='col-md-6 col-sm-6 text-center'>
+							<div class='fade-in-borders'>
+								<a href='http://faugo.com/wordstudyapp'>
+									<img src='assets/images/projects/wordstudy.png' class='preview'></img>
 								</a>
 								<div class='wow fadeInRight fade-in-border' data-wow-offset='80' data-wow-duration='2s'></div>
 								<div class='wow fadeInLeft fade-in-border' data-wow-offset='80' data-wow-duration='2s'></div>
@@ -307,23 +312,29 @@
 			<div class='row footer-slide'>
 				<div class='max-width-container'>
 
-					<div>
-						Hero Image Source: <a href='https://www.flickr.com/photos/coralicrfo'>Desobte</a>
-					</div>
+					<strong>Additional Projects</strong>
+                    <ul>
+						<li><a href="http://brendanmle.com/uploads/staticweb/index.html">Redesign for CS132 Website</a></li>
+						<li><a href="http://faugo.com/colorguess">Guess the color hex game</a></li>
+						<li><a href="http://dominion.brendanmle.com/game">Web client for Dominion, with AI (CS032 Final Project)</a></li>
+                        <li><a href="http://slbd.lovedatascience.com/">Homework submission and leaderboard site for PHP2560</a></li>
+						<li><a href="http://brendanmle.com/uploads/gas/">Gas Station Comparision</a></li>
+						<li><a href="https://leb2.github.io/brgd-fall-2017/build/">Unity platformer game (BRGD)</a></li>
+						<li><a href="http://faugo.com/gallery/">Art Gallery Model</a></li>
+
+					</ul>
+
 					<div>
 						<a href='https://github.com/leb2/'>Github</a>
+                        <br/>
+						<a href='http://brendanmle.com/uploads/resume.pdf'>Resume</a>
 					</div>
-
+					<div>
+					</div>
 				</div>
 			</div>
-
-
-
 		</div>
-
 	</body>
-
-
 
 	<!-- Page Javascript -->
 	<script src='assets/javascript/wow.min.js'></script>
